[gd_scene load_steps=6 format=3 uid="uid://durf8o8ofv2gr"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_35xvv"]
[ext_resource type="PackedScene" uid="uid://blkbwdgrn6lj1" path="res://input_mapper2.tscn" id="2_etnqn"]
[ext_resource type="PackedScene" uid="uid://cau6utct3p3ib" path="res://options.tscn" id="3_e57vo"]
[ext_resource type="PackedScene" uid="uid://coaa4micjdhh4" path="res://TimeAttack.tscn" id="4_emjif"]
[ext_resource type="Texture2D" uid="uid://c7wjw7rc8mufw" path="res://Sprites/logo.png" id="4_nbog8"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("levelCounter")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_35xvv")
levelCounter = NodePath("PanelContainer/VBoxContainer/LevelCounter")

[node name="InputMapper" parent="." instance=ExtResource("2_etnqn")]
visible = false

[node name="Options" parent="." instance=ExtResource("3_e57vo")]
visible = false

[node name="TimeAttack" parent="." instance=ExtResource("4_emjif")]
visible = false

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="LevelCounter" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Current Level: 0"
horizontal_alignment = 1

[node name="NoSave" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "No Save Run"

[node name="NewGame" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="LoadGame" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="TimeAttack" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Time Attack"

[node name="DeleteData" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Delete Data"

[node name="Options" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitGame" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(574, 145)
texture = ExtResource("4_nbog8")

[connection signal="pressed" from="PanelContainer/VBoxContainer/NoSave" to="." method="_on_no_save_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TimeAttack" to="." method="_on_time_attack_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/DeleteData" to="." method="_on_delete_data_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
